--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link href="reset.css" rel="stylesheet" />
-    <link href="output.css" rel="stylesheet" />
+    <link href="/css/reset.css" rel="stylesheet" />
+    <link href="/css/output.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <navbar class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black ">
         <div class="img">
-            <img src="logo.png" alt="logo" width="150" height="150" />
+            <img src="/images/logo.png" alt="logo" width="150" height="150" />
         </div>
         <div id="btn" class="text-white">
             <a href="/auth/login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</a>
@@ -24,12 +26,12 @@
             <a href="/explore" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
         </aside>
         <article class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto">
-            <p>{{introText}}</p>
-            <p>{{mainContent}}</p>
+            {{{body}}} <!-- This is where the content of other handlebars templates, like index.handlebars, will be injected. -->
         </article>
     </section>
     <footer class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600">
         <p>Copyright</p>
     </footer>
 </body>
+
 </html>
