registered footer/copyright in handlebars

--- a/public/register.handlebars
+++ b/public/register.handlebars
@@ -41,7 +41,11 @@
         </form>
     </main>
 </section>
-
+ <footer
+      class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600"
+    >
+    &copy; 2023 BeatRouteColumbus. All rights reserved.
+    </footer>
 </body>
 
 </html>
