--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 <body>
     <navbar class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black ">
         <div class="img">
-            <img src="/images/logo.png" alt="logo" width="150" height="150" />
+            <img src="../../logo.png" alt="logo" width="150" height="150" />
         </div>
         <div id="btn" class="text-white">
             <a href="/auth/login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Login</a>
@@ -25,7 +25,6 @@
             <a href="/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
             <a href="/explore" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
         </aside>
-        < class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 flex-auto">
             {{{body}}} <!-- This is where the content of other handlebars templates, like index.handlebars, will be injected. -->
         </article>
     </section>
