--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,16 +20,17 @@
             <a href="/auth/register" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Register</a>
         </div>
     </navbar>
-    <section class="flex justify-start">
-        <aside class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black text-white flex-none ">
+    <section class="flex justify-start h-screen bg-black text-white">
+        <aside class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black  flex-none ">
             <a href="/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
             <a href="/explore" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
         </aside>
+        <article>
             {{{body}}} <!-- This is where the content of other handlebars templates, like index.handlebars, will be injected. -->
         </article>
     </section>
     <footer class="p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600">
-        <p>Copyright</p>
+        <p>© 2023 Beat Route Columbus, Columbus, Ohio. All Rights Reserved.</p>
     </footer>
 </body>
 
