--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <navbar class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-black ">
+    <navbar class="flex justify-between items-center p-7 border-solid border-4 border-indigo-500/100 border-x-indigo-500 bg-red-600 ">
         <div class="img">
             <img src="../../logo.png" alt="logo" width="150" height="150" />
         </div>
@@ -25,7 +25,7 @@
             <a href="/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Home</a>
             <a href="/explore" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Explore Blogs</a>
         </aside>
-        <article>
+        <article class="p-10">
             {{{body}}} <!-- This is where the content of other handlebars templates, like index.handlebars, will be injected. -->
         </article>
     </section>
