getting handlebars cleaned up

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,7 +18,7 @@
             <div class="alert alert-danger">{{error}}</div>
             {{/if}}
             <!-- Create a form for user login with specific styling -->
-            <form action="/login" method="post" class="p-8 space-y-4">
+            <form action="../public/js/login.js" method="post" class="p-8 space-y-4">
                 <!-- Create a field for entering a username -->
                 <div>
                     <label for="user_name" class="block mb-2 text-sm">Username</label>
