--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <title>Beat Route</title>
     <!-- Include CSS stylesheets from your project -->
     <link href="/css/reset.css" rel="stylesheet" />
     <link href="/css/output.css" rel="stylesheet" />
