--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -13,7 +13,7 @@
         <!-- Create a main section that takes up the remaining space -->
         <main class="flex-grow">
             <!-- Create a form for user registration with specific styling -->
-            <form action="/auth/register" method="post" class="p-8 space-y-4">
+            <form action="/register" method="post" class="p-8 space-y-4">
                 <!-- Create a field for entering a username -->
                 <div>
                     <label for="username" class="block mb-2 text-sm">Username</label>
