--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,11 @@
-<h1>Welcome to the Blog</h1>
-<p>Some introductory content for the homepage...</p>
-<p>I'm Elize Lutus!  Nice to meet you!</p>
+  <header>
+        <h1>Welcome to Beat Route</h1>
+        <p>Come discover local music around Columbus, Ohio</p>
+        <p>Connect with your fellow music lovers and neighbors and share your experiences all over the city!</p>
+    </header>
+
+    <section class="section">
+        <h2>Discover shows and venues near you!</h2>
+        <p>You can search here by Venue, Genre, or Date!</p>
+        
+    </section>
