--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,8 +4,18 @@
         <p>Connect with your fellow music lovers and neighbors and share your experiences all over the city!</p>
     </header>
 
-    <section class="section">
+    <section class="homeSearch" id="results-section" style="display: none;">
         <h2>Discover shows and venues near you!</h2>
         <p>You can search here by Venue, Genre, or Date!</p>
-        
+        <form action="/search" id="results">
+        <div class="control">
+          <input type="text" id="search-input" class="input" placeholder="Search now!">
+        </div>
+        <div class="control">
+          <button type="submit" class="block w-full mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Search</button>
+        </div>
+        </form>
+    <section id="results-section" class="section" style="display: none;">
+    
+  </section>
     </section>
