--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,6 +51,10 @@
                 href="/explore"
                 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
             >Explore Blogs</a>
+            <a
+                href="/profile"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+            >Profile</a>
         </aside>
 
         <!-- Article Content -->
