--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,10 +1,5 @@
  <div action="/profile" class="profile">
-    <section id="profile-info">
-        <h2>Your Info</h2>
-        <h1 id="user_name">{{user_name}}</h1>
-        <h1 id="first_name">{{first_name}}</h1>
-        <h1 id="last_name">{{last_name}}</h1>
-        <h1 id="email">{{email}}</h1>
+    <section id="profile-info" class="profile-container">
     </section>
 
     <section action="/userPosts" id="user-posts">
@@ -14,3 +9,4 @@
         </ul>
     </section>
 </div>
+<script src="../public/js/profile.js"></script>
