input text black

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -18,31 +18,31 @@
                 <div>
                     <label for="username" class="block mb-2 text-sm">Username</label>
                     <!-- Create an input field for the username with an 'id' and 'name' attribute, and it's required -->
-                    <input type="text" id="username" name="user_name" required>
+                    <input class="text-black" type="text" id="username" name="user_name" required>
                 </div>
                 <!-- Create a field for entering a first name -->
                 <div>
                     <label for="firstName" class="block mb-2 text-sm">First Name</label>
                     <!-- Create an input field for the first name with an 'id' and 'name' attribute, and it's required -->
-                    <input type="text" id="firstName" name="first_name" required>
+                    <input class="text-black" type="text" id="firstName" name="first_name" required>
                 </div>
                 <!-- Create a field for entering a last name -->
                 <div>
                     <label for="lastName" class="block mb-2 text-sm">Last Name</label>
                     <!-- Create an input field for the last name with an 'id' and 'name' attribute, and it's required -->
-                    <input type="text" id="lastName" name="last_name" required>
+                    <input class="text-black" type="text" id="lastName" name="last_name" required>
                 </div>
                 <!-- Create a field for entering an email -->
                 <div>
                     <label for="email" class="block mb-2 text-sm">Email</label>
                     <!-- Create an input field for the email with an 'id' and 'name' attribute, and it's required -->
-                    <input type="email" id="email" name="email" required>
+                    <input class="text-black" type="email" id="email" name="email" required>
                 </div>
                 <!-- Create a field for entering a password -->
                 <div>
                     <label for="password" class="block mb-2 text-sm">Password</label>
                     <!-- Create an input field for the password with an 'id' and 'name' attribute, and it's required -->
-                    <input type="password" id="password" name="pwd_hash" required>
+                    <input class="text-black" type="password" id="password" name="pwd_hash" required>
                 </div>
                 <!-- Create a registration button with specific styling -->
                 <button type="submit"
